overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,11 @@ html, body, * {
 .customBtn {
     @apply leading-none border-transparent rounded bg-gradient-to-r from-cyan-500 to-blue-500 ;
 }
+
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
